# gigachat-cli

./: Cargo.toml  README.md
src/: main.rs
src/gigachat/: client.rs  types.rs
