[package]
name = "gigachat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

